// Autogenerated with StateSmith 0.22.1-alpha-1+63e5c1c8f4246c6c2d862264aeda8f4ba0a27f54.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#pragma once  // You can also specify normal include guard. See https://github.com/StateSmith/StateSmith/blob/main/docs/settings.md
#include <stdint.h>

typedef enum V2_ControlSm_EventId
{
    V2_ControlSm_EventId_DIM = 0,
    V2_ControlSm_EventId_INC = 1,
    V2_ControlSm_EventId_OFF = 2
} V2_ControlSm_EventId;

#define V2_ControlSm_EventIdCount (3)

typedef enum V2_ControlSm_StateId
{
    V2_ControlSm_StateId_ROOT = 0,
    V2_ControlSm_StateId_OFF = 1,
    V2_ControlSm_StateId_ON_GROUP = 2,
    V2_ControlSm_StateId_ON1 = 3,
    V2_ControlSm_StateId_ON2 = 4,
    V2_ControlSm_StateId_ON3 = 5
} V2_ControlSm_StateId;

#define V2_ControlSm_StateIdCount (6)

// Subtree meta data generation can be disabled in settings.
// Details: https://github.com/StateSmith/StateSmith/issues/538
#define V2_ControlSm_ROOT_SubtreeEndId (5)  // State 'V2_ControlSm' subtree extends from itself (id: 0) to state 'ON3' (id: 5)
#define V2_ControlSm_OFF_SubtreeEndId (1)  // State 'OFF' subtree extends from itself (id: 1) to state 'OFF' (id: 1)
#define V2_ControlSm_ON_GROUP_SubtreeEndId (5)  // State 'ON_GROUP' subtree extends from itself (id: 2) to state 'ON3' (id: 5)
#define V2_ControlSm_ON1_SubtreeEndId (3)  // State 'ON1' subtree extends from itself (id: 3) to state 'ON1' (id: 3)
#define V2_ControlSm_ON2_SubtreeEndId (4)  // State 'ON2' subtree extends from itself (id: 4) to state 'ON2' (id: 4)
#define V2_ControlSm_ON3_SubtreeEndId (5)  // State 'ON3' subtree extends from itself (id: 5) to state 'ON3' (id: 5)


// Generated state machine
// forward declaration
typedef struct V2_ControlSm V2_ControlSm;

// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void V2_ControlSm_ctor(V2_ControlSm* sm);

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void V2_ControlSm_start(V2_ControlSm* sm);

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void V2_ControlSm_dispatch_event(V2_ControlSm* sm, V2_ControlSm_EventId event_id);

// Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
char const * V2_ControlSm_state_id_to_string(V2_ControlSm_StateId id);

// Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
char const * V2_ControlSm_event_id_to_string(V2_ControlSm_EventId id);

// Returns the parent state for a given state. Returns ROOT if input has no parent.
// Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
V2_ControlSm_StateId V2_ControlSm_get_parent_id(V2_ControlSm_StateId id);

// Generated state machine
struct V2_ControlSm
{
    // Used internally by state machine. Feel free to inspect, but don't modify.
    V2_ControlSm_StateId state_id;
};

